compiler/y.output
Terminals which are not used

   SEMICOLON
   ERROR


State 4 conflicts: 1 shift/reduce
State 6 conflicts: 15 shift/reduce
State 19 conflicts: 15 shift/reduce
State 47 conflicts: 1 shift/reduce
State 52 conflicts: 2 shift/reduce
State 53 conflicts: 1 shift/reduce
State 56 conflicts: 2 shift/reduce
State 58 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 96 conflicts: 15 shift/reduce
State 152 conflicts: 2 shift/reduce
State 159 conflicts: 14 shift/reduce
State 190 conflicts: 1 shift/reduce
State 196 conflicts: 2 shift/reduce
State 197 conflicts: 2 shift/reduce
State 198 conflicts: 1 shift/reduce
State 199 conflicts: 1 shift/reduce
State 200 conflicts: 1 shift/reduce
State 201 conflicts: 1 shift/reduce
State 202 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: element program
    2        | /* empty */

    3 element: header
    4        | stmt

    5 header: IF test COLON
    6       | ELIF test COLON
    7       | ELSE COLON
    8       | WHILE test COLON
    9       | FOR exprlist IN testlist COLON
   10       | funcheader
   11       | decorator

   12 funcheader: DEF NAME parameters ret_annot COLON

   13 ret_annot: ARROW test
   14          | /* empty */

   15 decorator: AT dotted_name deco_args

   16 deco_args: OPEN_PARENTHESIS call_args CLOSE_PARENTHESIS
   17          | /* empty */

   18 parameters: OPEN_PARENTHESIS params CLOSE_PARENTHESIS

   19 params: paramlist
   20       | /* empty */

   21 paramlist: param paramlist_tail

   22 paramlist_tail: COMMA param_after_comma
   23               | /* empty */

   24 param_after_comma: param paramlist_tail
   25                  | /* empty */

   26 param: NAME param_tail

   27 param_tail: COLON test param_default
   28           | ASSIGN test
   29           | /* empty */

   30 param_default: ASSIGN test
   31              | /* empty */

   32 stmt: testlist assign_tail
   33     | RETURN return_tail
   34     | PASS
   35     | BREAK
   36     | CONTINUE
   37     | import_stmt
   38     | ASSERT test assert_tail
   39     | RAISE raise_tail
   40     | GLOBAL name_list
   41     | NONLOCAL name_list
   42     | DEL exprlist

   43 assign_tail: ASSIGN testlist eq_chain_tail
   44            | augassign testlist
   45            | /* empty */

   46 eq_chain_tail: ASSIGN testlist eq_chain_tail
   47              | /* empty */

   48 augassign: PLUS_ASSIGN
   49          | MINUS_ASSIGN
   50          | STAR_ASSIGN
   51          | SLASH_ASSIGN
   52          | DOUBLE_SLASH_ASSIGN
   53          | PERCENT_ASSIGN
   54          | DOUBLE_STAR_ASSIGN
   55          | AMPERSAND_ASSIGN
   56          | PIPE_ASSIGN
   57          | CARET_ASSIGN
   58          | LEFT_SHIFT_ASSIGN
   59          | RIGHT_SHIFT_ASSIGN

   60 return_tail: testlist
   61            | /* empty */

   62 assert_tail: COMMA test
   63            | /* empty */

   64 raise_tail: test
   65           | /* empty */

   66 name_list: NAME name_list_tail

   67 name_list_tail: COMMA NAME name_list_tail
   68               | /* empty */

   69 import_stmt: IMPORT dotted_as_names
   70            | FROM dotted_name IMPORT import_target

   71 import_target: STAR
   72              | name_as_names

   73 dotted_as_names: dotted_as_name dotted_as_names_tail

   74 dotted_as_names_tail: COMMA dotted_as_name dotted_as_names_tail
   75                     | /* empty */

   76 dotted_as_name: dotted_name as_opt

   77 name_as_names: name_as_name name_as_names_tail

   78 name_as_names_tail: COMMA name_as_name name_as_names_tail
   79                   | /* empty */

   80 name_as_name: NAME as_opt

   81 as_opt: AS NAME
   82       | /* empty */

   83 dotted_name: NAME dotted_name_tail

   84 dotted_name_tail: DOT NAME dotted_name_tail
   85                 | /* empty */

   86 test: or_test

   87 testlist: test testlist_tail

   88 testlist_tail: COMMA testlist_after_comma
   89              | /* empty */

   90 testlist_after_comma: test testlist_tail
   91                     | /* empty */

   92 exprlist: expr exprlist_tail

   93 exprlist_tail: COMMA exprlist_after_comma
   94              | /* empty */

   95 exprlist_after_comma: expr exprlist_tail
   96                     | /* empty */

   97 or_test: and_test or_tail

   98 or_tail: OR and_test or_tail
   99        | /* empty */

  100 and_test: not_test and_tail

  101 and_tail: AND not_test and_tail
  102         | /* empty */

  103 not_test: NOT not_test
  104         | comparison

  105 comparison: expr comp_tail

  106 comp_tail: comp_op expr comp_tail
  107          | /* empty */

  108 comp_op: LESS
  109        | LESS_EQUAL
  110        | GREATER
  111        | GREATER_EQUAL
  112        | EQUAL_EQUAL
  113        | NOT_EQUAL
  114        | IN
  115        | NOT IN
  116        | IS is_not_opt

  117 is_not_opt: NOT
  118           | /* empty */

  119 expr: xor_expr bitor_tail

  120 bitor_tail: PIPE xor_expr bitor_tail
  121           | /* empty */

  122 xor_expr: and_expr xor_tail

  123 xor_tail: CARET and_expr xor_tail
  124         | /* empty */

  125 and_expr: shift_expr bitand_tail

  126 bitand_tail: AMPERSAND shift_expr bitand_tail
  127            | /* empty */

  128 shift_expr: arith_expr shift_tail

  129 shift_tail: LEFT_SHIFT arith_expr shift_tail
  130           | RIGHT_SHIFT arith_expr shift_tail
  131           | /* empty */

  132 arith_expr: term arith_tail

  133 arith_tail: PLUS term arith_tail
  134           | MINUS term arith_tail
  135           | /* empty */

  136 term: factor term_tail

  137 term_tail: STAR factor term_tail
  138          | SLASH factor term_tail
  139          | DOUBLE_SLASH factor term_tail
  140          | PERCENT factor term_tail
  141          | AT factor term_tail
  142          | /* empty */

  143 factor: PLUS factor
  144       | MINUS factor
  145       | TILDE factor
  146       | power

  147 power: atom_expr power_tail

  148 power_tail: DOUBLE_STAR factor
  149           | /* empty */

  150 atom_expr: atom trailer_list

  151 trailer_list: trailer trailer_list
  152             | /* empty */

  153 trailer: OPEN_PARENTHESIS call_args CLOSE_PARENTHESIS
  154        | OPEN_BRACKET subscriptlist CLOSE_BRACKET
  155        | DOT NAME

  156 call_args: arglist
  157          | /* empty */

  158 atom: NAME
  159     | INTEGER
  160     | FLOAT
  161     | strings
  162     | TRUE
  163     | FALSE
  164     | NONE
  165     | ELLIPSIS
  166     | OPEN_PARENTHESIS paren_body CLOSE_PARENTHESIS
  167     | OPEN_BRACKET list_body CLOSE_BRACKET
  168     | OPEN_BRACE dict_body CLOSE_BRACE

  169 paren_body: testlist
  170           | /* empty */

  171 list_body: testlist
  172          | /* empty */

  173 dict_body: dict_items
  174          | /* empty */

  175 strings: STRING strings_tail

  176 strings_tail: STRING strings_tail
  177             | /* empty */

  178 dict_items: dict_item dict_items_tail

  179 dict_items_tail: COMMA dict_items_after_comma
  180                | /* empty */

  181 dict_items_after_comma: dict_item dict_items_tail
  182                       | /* empty */

  183 dict_item: test COLON test

  184 arglist: argument arglist_tail

  185 arglist_tail: COMMA arglist_after_comma
  186             | /* empty */

  187 arglist_after_comma: argument arglist_tail
  188                    | /* empty */

  189 argument: test kwarg_tail

  190 kwarg_tail: ASSIGN test
  191           | /* empty */

  192 subscriptlist: subscript subs_tail

  193 subs_tail: COMMA subs_after_comma
  194          | /* empty */

  195 subs_after_comma: subscript subs_tail
  196                 | /* empty */

  197 subscript: test subscript_tail
  198          | COLON slice_upper

  199 subscript_tail: COLON slice_upper
  200               | /* empty */

  201 slice_upper: test slice_step_opt
  202            | COLON step_opt
  203            | /* empty */

  204 slice_step_opt: COLON step_opt
  205               | /* empty */

  206 step_opt: test
  207         | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
NAME (258) 12 26 66 67 80 81 83 84 155 158
INTEGER (259) 159
FLOAT (260) 160
STRING (261) 175 176
DEF (262) 12
RETURN (263) 33
IF (264) 5
ELIF (265) 6
ELSE (266) 7
FOR (267) 9
WHILE (268) 8
IN (269) 9 114 115
AND (270) 101
OR (271) 98
NOT (272) 103 115 117
IS (273) 116
TRUE (274) 162
FALSE (275) 163
NONE (276) 164
IMPORT (277) 69 70
FROM (278) 70
AS (279) 81
PASS (280) 34
RAISE (281) 39
ASSERT (282) 38
BREAK (283) 35
CONTINUE (284) 36
GLOBAL (285) 40
NONLOCAL (286) 41
DEL (287) 42
PLUS (288) 133 143
MINUS (289) 134 144
STAR (290) 71 137
DOUBLE_STAR (291) 148
SLASH (292) 138
DOUBLE_SLASH (293) 139
PERCENT (294) 140
AT (295) 15 141
LESS (296) 108
LESS_EQUAL (297) 109
GREATER (298) 110
GREATER_EQUAL (299) 111
EQUAL_EQUAL (300) 112
NOT_EQUAL (301) 113
AMPERSAND (302) 126
PIPE (303) 120
CARET (304) 123
TILDE (305) 145
LEFT_SHIFT (306) 129
RIGHT_SHIFT (307) 130
ASSIGN (308) 28 30 43 46 190
PLUS_ASSIGN (309) 48
MINUS_ASSIGN (310) 49
STAR_ASSIGN (311) 50
SLASH_ASSIGN (312) 51
PERCENT_ASSIGN (313) 53
AMPERSAND_ASSIGN (314) 55
PIPE_ASSIGN (315) 56
CARET_ASSIGN (316) 57
LEFT_SHIFT_ASSIGN (317) 58
RIGHT_SHIFT_ASSIGN (318) 59
DOUBLE_STAR_ASSIGN (319) 54
DOUBLE_SLASH_ASSIGN (320) 52
OPEN_PARENTHESIS (321) 16 18 153 166
CLOSE_PARENTHESIS (322) 16 18 153 166
OPEN_BRACKET (323) 154 167
CLOSE_BRACKET (324) 154 167
OPEN_BRACE (325) 168
CLOSE_BRACE (326) 168
COMMA (327) 22 62 67 74 78 88 93 179 185 193
COLON (328) 5 6 7 8 9 12 27 183 198 199 202 204
DOT (329) 84 155
SEMICOLON (330)
ARROW (331) 13
ELLIPSIS (332) 165
ERROR (333)


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
program (80)
    on left: 1 2, on right: 0 1
element (81)
    on left: 3 4, on right: 1
header (82)
    on left: 5 6 7 8 9 10 11, on right: 3
funcheader (83)
    on left: 12, on right: 10
ret_annot (84)
    on left: 13 14, on right: 12
decorator (85)
    on left: 15, on right: 11
deco_args (86)
    on left: 16 17, on right: 15
parameters (87)
    on left: 18, on right: 12
params (88)
    on left: 19 20, on right: 18
paramlist (89)
    on left: 21, on right: 19
paramlist_tail (90)
    on left: 22 23, on right: 21 24
param_after_comma (91)
    on left: 24 25, on right: 22
param (92)
    on left: 26, on right: 21 24
param_tail (93)
    on left: 27 28 29, on right: 26
param_default (94)
    on left: 30 31, on right: 27
stmt (95)
    on left: 32 33 34 35 36 37 38 39 40 41 42, on right: 4
assign_tail (96)
    on left: 43 44 45, on right: 32
eq_chain_tail (97)
    on left: 46 47, on right: 43 46
augassign (98)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59, on right: 44
return_tail (99)
    on left: 60 61, on right: 33
assert_tail (100)
    on left: 62 63, on right: 38
raise_tail (101)
    on left: 64 65, on right: 39
name_list (102)
    on left: 66, on right: 40 41
name_list_tail (103)
    on left: 67 68, on right: 66 67
import_stmt (104)
    on left: 69 70, on right: 37
import_target (105)
    on left: 71 72, on right: 70
dotted_as_names (106)
    on left: 73, on right: 69
dotted_as_names_tail (107)
    on left: 74 75, on right: 73 74
dotted_as_name (108)
    on left: 76, on right: 73 74
name_as_names (109)
    on left: 77, on right: 72
name_as_names_tail (110)
    on left: 78 79, on right: 77 78
name_as_name (111)
    on left: 80, on right: 77 78
as_opt (112)
    on left: 81 82, on right: 76 80
dotted_name (113)
    on left: 83, on right: 15 70 76
dotted_name_tail (114)
    on left: 84 85, on right: 83 84
test (115)
    on left: 86, on right: 5 6 8 13 27 28 30 38 62 64 87 90 183 189
    190 197 201 206
testlist (116)
    on left: 87, on right: 9 32 43 44 46 60 169 171
testlist_tail (117)
    on left: 88 89, on right: 87 90
testlist_after_comma (118)
    on left: 90 91, on right: 88
exprlist (119)
    on left: 92, on right: 9 42
exprlist_tail (120)
    on left: 93 94, on right: 92 95
exprlist_after_comma (121)
    on left: 95 96, on right: 93
or_test (122)
    on left: 97, on right: 86
or_tail (123)
    on left: 98 99, on right: 97 98
and_test (124)
    on left: 100, on right: 97 98
and_tail (125)
    on left: 101 102, on right: 100 101
not_test (126)
    on left: 103 104, on right: 100 101 103
comparison (127)
    on left: 105, on right: 104
comp_tail (128)
    on left: 106 107, on right: 105 106
comp_op (129)
    on left: 108 109 110 111 112 113 114 115 116, on right: 106
is_not_opt (130)
    on left: 117 118, on right: 116
expr (131)
    on left: 119, on right: 92 95 105 106
bitor_tail (132)
    on left: 120 121, on right: 119 120
xor_expr (133)
    on left: 122, on right: 119 120
xor_tail (134)
    on left: 123 124, on right: 122 123
and_expr (135)
    on left: 125, on right: 122 123
bitand_tail (136)
    on left: 126 127, on right: 125 126
shift_expr (137)
    on left: 128, on right: 125 126
shift_tail (138)
    on left: 129 130 131, on right: 128 129 130
arith_expr (139)
    on left: 132, on right: 128 129 130
arith_tail (140)
    on left: 133 134 135, on right: 132 133 134
term (141)
    on left: 136, on right: 132 133 134
term_tail (142)
    on left: 137 138 139 140 141 142, on right: 136 137 138 139 140
    141
factor (143)
    on left: 143 144 145 146, on right: 136 137 138 139 140 141 143
    144 145 148
power (144)
    on left: 147, on right: 146
power_tail (145)
    on left: 148 149, on right: 147
atom_expr (146)
    on left: 150, on right: 147
trailer_list (147)
    on left: 151 152, on right: 150 151
trailer (148)
    on left: 153 154 155, on right: 151
call_args (149)
    on left: 156 157, on right: 16 153
atom (150)
    on left: 158 159 160 161 162 163 164 165 166 167 168,
    on right: 150
paren_body (151)
    on left: 169 170, on right: 166
list_body (152)
    on left: 171 172, on right: 167
dict_body (153)
    on left: 173 174, on right: 168
strings (154)
    on left: 175, on right: 161
strings_tail (155)
    on left: 176 177, on right: 175 176
dict_items (156)
    on left: 178, on right: 173
dict_items_tail (157)
    on left: 179 180, on right: 178 181
dict_items_after_comma (158)
    on left: 181 182, on right: 179
dict_item (159)
    on left: 183, on right: 178 181
arglist (160)
    on left: 184, on right: 156
arglist_tail (161)
    on left: 185 186, on right: 184 187
arglist_after_comma (162)
    on left: 187 188, on right: 185
argument (163)
    on left: 189, on right: 184 187
kwarg_tail (164)
    on left: 190 191, on right: 189
subscriptlist (165)
    on left: 192, on right: 154
subs_tail (166)
    on left: 193 194, on right: 192 195
subs_after_comma (167)
    on left: 195 196, on right: 193
subscript (168)
    on left: 197 198, on right: 192 195
subscript_tail (169)
    on left: 199 200, on right: 197
slice_upper (170)
    on left: 201 202 203, on right: 198 199
slice_step_opt (171)
    on left: 204 205, on right: 201
step_opt (172)
    on left: 206 207, on right: 202 204


state 0

    0 $accept: . program $end

    NAME              shift, and go to state 1
    INTEGER           shift, and go to state 2
    FLOAT             shift, and go to state 3
    STRING            shift, and go to state 4
    DEF               shift, and go to state 5
    RETURN            shift, and go to state 6
    IF                shift, and go to state 7
    ELIF              shift, and go to state 8
    ELSE              shift, and go to state 9
    FOR               shift, and go to state 10
    WHILE             shift, and go to state 11
    NOT               shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NONE              shift, and go to state 15
    IMPORT            shift, and go to state 16
    FROM              shift, and go to state 17
    PASS              shift, and go to state 18
    RAISE             shift, and go to state 19
    ASSERT            shift, and go to state 20
    BREAK             shift, and go to state 21
    CONTINUE          shift, and go to state 22
    GLOBAL            shift, and go to state 23
    NONLOCAL          shift, and go to state 24
    DEL               shift, and go to state 25
    PLUS              shift, and go to state 26
    MINUS             shift, and go to state 27
    AT                shift, and go to state 28
    TILDE             shift, and go to state 29
    OPEN_PARENTHESIS  shift, and go to state 30
    OPEN_BRACKET      shift, and go to state 31
    OPEN_BRACE        shift, and go to state 32
    ELLIPSIS          shift, and go to state 33

    $default  reduce using rule 2 (program)

    program      go to state 34
    element      go to state 35
    header       go to state 36
    funcheader   go to state 37
    decorator    go to state 38
    stmt         go to state 39
    import_stmt  go to state 40
    test         go to state 41
    testlist     go to state 42
    or_test      go to state 43
    and_test     go to state 44
    not_test     go to state 45
    comparison   go to state 46
    expr         go to state 47
    xor_expr     go to state 48
    and_expr     go to state 49
    shift_expr   go to state 50
    arith_expr   go to state 51
    term         go to state 52
    factor       go to state 53
    power        go to state 54
    atom_expr    go to state 55
    atom         go to state 56
    strings      go to state 57


state 1

  158 atom: NAME .

    $default  reduce using rule 158 (atom)


state 2

  159 atom: INTEGER .

    $default  reduce using rule 159 (atom)


state 3

  160 atom: FLOAT .

    $default  reduce using rule 160 (atom)


state 4

  175 strings: STRING . strings_tail

    STRING  shift, and go to state 58

    STRING    [reduce using rule 177 (strings_tail)]
    $default  reduce using rule 177 (strings_tail)

    strings_tail  go to state 59


state 5

   12 funcheader: DEF . NAME parameters ret_annot COLON

    NAME  shift, and go to state 60


state 6

   33 stmt: RETURN . return_tail

    NAME              shift, and go to state 1
    INTEGER           shift, and go to state 2
    FLOAT             shift, and go to state 3
    STRING            shift, and go to state 4
    NOT               shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NONE              shift, and go to state 15
    PLUS              shift, and go to state 26
    MINUS             shift, and go to state 27
    TILDE             shift, and go to state 29
    OPEN_PARENTHESIS  shift, and go to state 30
    OPEN_BRACKET      shift, and go to state 31
    OPEN_BRACE        shift, and go to state 32
    ELLIPSIS          shift, and go to state 33

    NAME              [reduce using rule 61 (return_tail)]
    INTEGER           [reduce using rule 61 (return_tail)]
    FLOAT             [reduce using rule 61 (return_tail)]
    STRING            [reduce using rule 61 (return_tail)]
    NOT               [reduce using rule 61 (return_tail)]
    TRUE              [reduce using rule 61 (return_tail)]
    FALSE             [reduce using rule 61 (return_tail)]
    NONE              [reduce using rule 61 (return_tail)]
    PLUS              [reduce using rule 61 (return_tail)]
    MINUS             [reduce using rule 61 (return_tail)]
    TILDE             [reduce using rule 61 (return_tail)]
    OPEN_PARENTHESIS  [reduce using rule 61 (return_tail)]
    OPEN_BRACKET      [reduce using rule 61 (return_tail)]
    OPEN_BRACE        [reduce using rule 61 (return_tail)]
    ELLIPSIS          [reduce using rule 61 (return_tail)]
    $default          reduce using rule 61 (return_tail)

    return_tail  go to state 61
    test         go to state 41
    testlist     go to state 62
    or_test      go to state 43
    and_test     go to state 44
    not_test     go to state 45
    comparison   go to state 46
    expr         go to state 47
    xor_expr     go to state 48
    and_expr     go to state 49
    shift_expr   go to state 50
    arith_expr   go to state 51
    term         go to state 52
    factor       go to state 53
    power        go to state 54
    atom_expr    go to state 55
    atom         go to state 56
    strings      go to state 57


state 7

    5 header: IF . test COLON

    NAME              shift, and go to state 1
    INTEGER           shift, and go to state 2
    FLOAT             shift, and go to state 3
    STRING            shift, and go to state 4
    NOT               shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NONE              shift, and go to state 15
    PLUS              shift, and go to state 26
    MINUS             shift, and go to state 27
    TILDE             shift, and go to state 29
    OPEN_PARENTHESIS  shift, and go to state 30
    OPEN_BRACKET      shift, and go to state 31
    OPEN_BRACE        shift, and go to state 32
    ELLIPSIS          shift, and go to state 33

    test        go to state 63
    or_test     go to state 43
    and_test    go to state 44
    not_test    go to state 45
    comparison  go to state 46
    expr        go to state 47
    xor_expr    go to state 48
    and_expr    go to state 49
    shift_expr  go to state 50
    arith_expr  go to state 51
    term        go to state 52
    factor      go to state 53
    power       go to state 54
    atom_expr   go to state 55
    atom        go to state 56
    strings     go to state 57


state 8

    6 header: ELIF . test COLON

    NAME              shift, and go to state 1
    INTEGER           shift, and go to state 2
    FLOAT             shift, and go to state 3
    STRING            shift, and go to state 4
    NOT               shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NONE              shift, and go to state 15
    PLUS              shift, and go to state 26
    MINUS             shift, and go to state 27
    TILDE             shift, and go to state 29
    OPEN_PARENTHESIS  shift, and go to state 30
    OPEN_BRACKET      shift, and go to state 31
    OPEN_BRACE        shift, and go to state 32
    ELLIPSIS          shift, and go to state 33
